# git-biasect

./: .gitignore  Cargo.toml  README.md
.github/workflow/: lint.yml
.github/workflows/: test.yml
src/: alloc.rs  lib.rs  shell.rs  visualize.rs
src/benches/: README  benchmark.rs
src/tests/: alloc_bencher.rs  alloc_tests.rs  mod.rs
test_real_repo/: bisect.sh  gen_commits.sh
